--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 beautifulsoup4==4.11.1
 colorama==0.4.6
-requests==2.28.2
+requests==2.31.0
+requests-toolbelt==1.0.0
 markdown==3.4.1
 python-frontmatter==1.0.0
 python-dotenv==0.21.1
+cloudscraper==1.2.71
